--- a/lib/l10n/intl_ua.arb
+++ b/lib/l10n/intl_ua.arb
@@ -1,3 +1,13 @@
 {
-    "exit" : "Вхід"
+    "exit" : "Вхід",
+    "all" : "Усі",
+    "works" : "Робочі",
+    "personal" : "Особисті",
+    "create" : "Створити",
+    "delete" : "Видалити",
+    "nameTask": "Назва завдання...",
+    "urgent" : "Термінове",
+    "endDate" : "Дата завершення:",
+    "attachFile" : "Прикріпити файл",
+    "add description" : "Додати опис..."
 }
