--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -9,5 +9,5 @@
     "urgent" : "Термінове",
     "endDate" : "Дата завершення:",
     "attachFile" : "Прикріпити файл",
-    "add description" : "Додати опис..."
+    "addDescription" : "Додати опис..."
 }
