twenty first commit(add picture, begin get_it)

--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -9,5 +9,6 @@
     "urgent" : "Термінове",
     "endDate" : "Дата завершення:",
     "attachFile" : "Прикріпити файл",
-    "addDescription" : "Додати опис..."
+    "addDescription" : "Додати опис...",
+    "nestedImage" : "Вкладене зображення"
 }
